
Sun Oct 15 20:09:52 MESZ 2000
tobi:
* reduced memory fragmentation in JAM api

Sun Oct 15 19:17:28 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM fixes

Sat Oct 14 23:18:01 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM fix: sqpack don't crashes on areas when msgs deleted from golded
* JAM fix: hpt link works good after deleting msgs from golded

Mon Oct  9 10:10:43 NOVST 2000
max:
* FFindOpen() postfix

----- cvs ci ------
Sat Oct  7 13:53:49 NOVST 2000
max:
* fixed bug in FFindOpen() (path like "/*")

----- cvs ci ------
Tue Oct  3 18:22:25 MSZ 2000
tobi:
* introduced MSGIMM flag in XMSG for use by JAM API

----- cvs ci ------
Tue Oct  3 17:05:57 MSD 2000
Fedor:
* definited xmreply1st and xmreplynext for used jam linker
- deleted xmsg.replynext

----- cvs ci ------
Tue Oct  3 00:19:14 MEZ 2000
tobi:
* Support Jam Direct flag (JMSG_DIRECT) via MSGXX1 Squish flag, which is
  already used for "Direct" flagging by a lot of Squish programs.

----- cvs ci ------
Fri Sep 15 10:57:04 MSD 2000
max (patch from Serguei Revtov):
* core dump on Solaris (create_semaphore)

----- cvs ci ------
Wed Sep 13 14:40:01 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM linking with empty msg subjects

----- cvs ci ------
Mon Sep 11 10:56:46 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM fix - "Path:" changed to "PATH:"

----- cvs ci ------
Wed Sep  6 17:36:17 NOVST 2000
max (patch from Serguei Revtov):
* compiling on Win9x

----- cvs ci ------
Tue Sep  5 23:04:04 NOVST 2000
max (patches from Pavel Gulchouk):
* jam updates (TZUTC kludge processing & more...)
* get_word() & get_dword() fixes

----- cvs ci ------
Mon Sep 04 12:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* semaphores for OS/2
* jam update for "hpt link" & "hptlink"
* fix: writing zero-terminated msg, reading any msg.

----- cvs ci ------
Sun Sep 03 19:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* ReplyTo/Reply1st/ReplyNext support ("hpt link" links jam areas now)

----- cvs ci ------